--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-
+p.p1 {
+    background-color: lightblue;
+    height: 150px;
+    width: 150px;
+    z-index: 1;
+  }
+  
 .orange{
 
   color: rgb(235, 105, 30);
